--- a/src/app/rules/rules.component.html
+++ b/src/app/rules/rules.component.html
@@ -9,6 +9,6 @@
     range of (specialists) Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque esse earum vero et corporis reprehenderit eligendi, doloremque sapiente ipsam. Voluptatibus suscipit, eius perferendis cum nam repudiandae aperiam. Quo in earum consectetur sint distinctio, vero atque dolorum ratione? Obcaecati quasi consequuntur.
   </p>
   <div class="ok-button">
-    <button>OK</button>
+    <button (click)="router.navigate(['/map'])">OK</button>
   </div>
 </div>
