--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
 
     <div class="navigation">
       <ul>
-        <li><a routerLink="materials" routerLinkActive="active-link">Hand over raw materials</a></li>
+        <li><a routerLink="add" routerLinkActive="active-link">Add service</a></li>
         <li><a routerLink="rules" routerLinkActive="active-link">Sorting rules</a></li>
         <li><a routerLink="taxi" routerLinkActive="active-link">Eco-taxi order</a></li>
       </ul>
