--- a/src/app/taxi/taxi.component.scss
+++ b/src/app/taxi/taxi.component.scss
@@ -31,7 +31,9 @@
     }
     select {
         appearance: none;
-        background: url('../../assets/arrow.png') no-repeat right;
+        background: url('../../assets/arrow.png') no-repeat;
+        background-position-x: 92%;
+        background-position-y: 50%;
     }
     
 }
