--- a/src/app/pages/add-service-page/add-service-page.component.scss
+++ b/src/app/pages/add-service-page/add-service-page.component.scss
@@ -60,6 +60,10 @@ h1 {
         font-family: Roboto;
         border-radius: 5px;
     }
+
+    button[disabled] {
+        background-color: #8b8b8b;
+    }
 }
 .bg {
     background: url("../../../assets/bgAddService.png");
@@ -75,6 +79,7 @@ h1 {
     padding: 13px;
     margin-bottom: 9px;
     width: 100%;
+    cursor: pointer;
 }
 
 .search:hover {
@@ -83,8 +88,8 @@ h1 {
 
 .search-block {
     position: absolute;
-    top: 236px;
-    background-color: white;
+    top: 216px;
+    background-color: rgb(247, 247, 247);
     width: 100%;
     border-radius: 5px;
 }
