--- a/src/app/pages/add-service-page/add-service-page.component.html
+++ b/src/app/pages/add-service-page/add-service-page.component.html
@@ -21,7 +21,7 @@
       <input placeholder="Description" formControlName="description" />
       <input placeholder="Phone number" formControlName="number" />
       <input
-        placeholder="Adress"
+        placeholder="Address"
         formControlName="address"
         [value]="selectedFeature?.place_name"
       />
