--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container">
-    <a routerLink="map"
+    <a routerLink="home"
       ><div class="logo">
         <span class="logo__text">ECO</span>
         <img src="../../assets/logo.png" alt="logo" class="logo__img" /></div
@@ -10,10 +10,10 @@
       <ul>
         <li><a routerLink="add" routerLinkActive="active-link">Add service</a></li>
         <li><a routerLink="rules" routerLinkActive="active-link">Sorting rules</a></li>
-        <li><a routerLink="taxi" routerLinkActive="active-link">Eco-taxi order</a></li>
+        <li><a routerLink="map" routerLinkActive="active-link">Drop-off points</a></li>
       </ul>
 
-      <a routerLink="map">
+      <a routerLink="home">
         <img src="../../assets/home.png" alt="home" />
       </a>
     </div>
