--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,45 @@
-<div class="title-block"></div>
+<div class="home-section">
+    <div class="title-block">
+        <div class="title-block-text">
+            <h1>FRESH LOOK AT RECYCLING</h1>
+            <div class="title-block-button">
+                <div class="title-button">
+                    Where can you take the recyclables?
+                </div>
+                <div class="title-button">
+                    Where can you the Sorting Rules?
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="about-us-block">
+
+        <h2>ABOUT US</h2>
+        <p>Likewise, the scope and location of staff training allows one to assess the importance of significant
+            financial and administrative conditions. Thus, the constant quantitative growth and scope of our activity is
+            an interesting experiment to verify the appropriate activation conditions. The task of the organization, in
+            particular the new model of organizational activity, provides a wide range of (specialists).</p>
+
+
+        <div class="about-us-block-photo">
+            <div class="about-us-block-photo-flex">
+                <div>
+                    <img src="../../assets/about-us/image-1.png">
+                </div>
+                <div>
+                    <img src="../../assets/about-us/image-2.png">
+                </div>
+            </div>
+            <div class="about-us-block-photo-flex">
+                <div >
+                    <img src="../../assets/about-us/image-3.png">
+                </div>
+                <div>
+                    <img src="../../assets/about-us/image-4.png">
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
