[ADD] routing to button

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,10 +3,10 @@
         <div class="title-block-text">
             <h1>FRESH LOOK AT RECYCLING</h1>
             <div class="title-block-button">
-                <div class="title-button">
+                <div class="title-button" routerLink="/map" >
                     Where can you take the recyclables?
                 </div>
-                <div class="title-button">
+                <div class="title-button" routerLink="/rules" >
                     Where can you the Sorting Rules?
                 </div>
             </div>
