--- a/src/app/pages/add-service-page/add-service-page.component.scss
+++ b/src/app/pages/add-service-page/add-service-page.component.scss
@@ -1,8 +1,15 @@
 h1 {
     text-align: center;
     font-size: 32px;
-    margin-bottom: 60px;
+    margin-bottom: 24px;
     font-family: Roboto;
+}
+
+p {
+    text-align: center;
+    font-family: Roboto;
+    line-height:22,5px;
+    margin-bottom: 24px;
 }
 
 .taxi-form {
