--- a/src/app/pages/add-service-page/add-service-page.component.scss
+++ b/src/app/pages/add-service-page/add-service-page.component.scss
@@ -9,7 +9,22 @@ p {
     text-align: center;
     font-family: Roboto;
     line-height:22,5px;
-    margin-bottom: 24px;
+    margin-bottom: 36px;
+}
+
+small {
+    // position: absolute;
+     color: rgb(179, 0, 0);
+    // top: 48px;
+    // left: 8px;
+}
+
+select.ng-touched.ng-invalid {
+    box-shadow: inset 0px 0px 8px rgba(247, 31, 31, 0.644) !important;
+}
+
+input.ng-touched.ng-invalid {
+    box-shadow: inset 0px 0px 8px rgba(247, 31, 31, 0.644) !important;
 }
 
 .taxi-form {
@@ -39,7 +54,7 @@ p {
         font-size: 16px;
         font-family: Roboto;
         padding: 13px;
-        margin-bottom: 9px;
+        // margin-bottom: 24px;
         width: 100%;
         box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
         border-radius: 5px;
@@ -54,7 +69,7 @@ p {
 }
 
 .taxi-button {
-    margin: 60px auto 0;
+    margin: 48px auto 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -101,4 +116,7 @@ p {
     border-radius: 5px;
 }
 
-
+.validation {
+    height: 24px;
+    padding-left: 8px;
+}
