--- a/src/app/pages/add-service-page/add-service-page.component.scss
+++ b/src/app/pages/add-service-page/add-service-page.component.scss
@@ -88,7 +88,7 @@ input.ng-touched.ng-invalid {
     }
 }
 .bg {
-    background: url("../../../assets/bgAddService.png");
+    background: url("../../../assets/elki.jpg");
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
