--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,10 +4,10 @@
             <h1>FRESH LOOK AT RECYCLING</h1>
             <div class="title-block-button">
                 <div class="title-button" routerLink="/map" >
-                    Where can you take the recyclables?
+                    Recycling services 
                 </div>
                 <div class="title-button" routerLink="/rules" >
-                    Where can you the Sorting Rules?
+                    Sorting rules
                 </div>
             </div>
         </div>
