--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -149,7 +149,7 @@
       <h4>Questions</h4>
 
       <div class="comments-list" #list *ngIf="service.questions && service.questions.length > 0; else noquestions">
-        <div class="comment" *ngFor="let question of service.questions">
+        <div class="comment question" *ngFor="let question of service.questions">
           <p>{{ question.description }}</p>
           <div>{{ question.created_at | date: "HH:mm, dd, MMM, Y" }}</div>
         </div>
@@ -172,7 +172,7 @@
         </div>
         <div>
           <textarea
-            placeholder="Write comment..."
+            placeholder="Write your question..."
             formControlName="description"
           >
           </textarea>
