--- a/src/app/rules-details/rules-details.component.scss
+++ b/src/app/rules-details/rules-details.component.scss
@@ -1,6 +1,7 @@
 .rules-details-block {
     width: 830px;
-    margin: 180px auto;
+    margin: 0 auto;
+    padding: 180px 0;
     font-family: "Roboto";
 
     h2 {
