--- a/src/app/pages/rules-page/rules-page.component.html
+++ b/src/app/pages/rules-page/rules-page.component.html
@@ -1,20 +1,22 @@
-<div class="bg">
-  <div class="rules-block">
+<div class="bg"  id="top">
+  <div class="rules-block" >
     <h2>Choose the type of waste</h2>
 
     <div class="rules-lists">
       <ul class="rules-column">
-        <li>Batteries</li>
-        <li>Clothing</li>
-        <li>E-waste</li>
-        <a>
-          <li> Light bulbs</li>
+        <a  [routerLink]="['rules']" href="#batteries" [pageScrollDuration]="500" pageScroll >
+          <li>Batteries</li>
         </a>
 
+        <li>Clothing</li>
+        <li>E-waste</li>
+        <a [routerLink]="['rules']" href="#light-bulbs" [pageScrollDuration]="500" pageScroll>
+          <li>Light bulbs</li>
+        </a>
       </ul>
       <ul class="rules-column">
         <li>Plastic</li>
-        <li>Paper </li>
+        <li>Paper</li>
         <li>Glass</li>
         <li>Metal</li>
       </ul>
@@ -25,9 +27,8 @@
 </div>
 
 <div class="rules-details-section">
-  <app-rules-details 
-  *ngFor="let rule of data" 
-  [rules]=rule>
-
+  <app-rules-details *ngFor="let rule of data" [rules]="rule">
   </app-rules-details>
 </div>
+
+<a [class.show]="showButton" id="button" [routerLink]="['rules']" href="#top" [pageScrollDuration]="500" pageScroll #button></a>
