--- a/src/app/pages/rules-page/rules-page.component.scss
+++ b/src/app/pages/rules-page/rules-page.component.scss
@@ -1,53 +1,93 @@
 .bg {
-    background: url("../../../assets/bgRules.jpg");
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: left;
-    padding: 284px 0 184px;
+  background: url("../../../assets/bgRules.jpg");
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left;
+  padding: 284px 0 184px;
 }
 
 .rules-block {
-    width: 830px;
-    margin: 0 auto;
-    font-family: "Roboto";
-    
+  width: 830px;
+  margin: 0 auto;
+  font-family: "Roboto";
 
-    h2 {
-        background-color: #fff;
-        text-align: center;
-        font-size: 36px;
-        padding: 20px;
-    }
+  h2 {
+    background-color: #fff;
+    text-align: center;
+    font-size: 36px;
+    padding: 20px;
+  }
 
-    h3 {
-        background-color: #fff;
-        text-align: center;
-        font-size: 24px;
-        padding: 20px;
-        margin-top: 16px;
-    }
-
+  h3 {
+    background-color: #fff;
+    text-align: center;
+    font-size: 24px;
+    padding: 20px;
+    margin-top: 16px;
+  }
 }
 
 .rules-lists {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .rules-column {
-    li {
-        background-color: #fff;
-        font-size: 24px;
-        text-align: center;
-        padding: 15px;
-        width: 380px;
-        margin-top: 16px;
-    }
-} 
+  li {
+    background-color: #fff;
+    font-size: 24px;
+    text-align: center;
+    padding: 15px;
+    width: 380px;
+    margin-top: 16px;
+  }
+}
 
 .rules-details-section {
-    margin: 100px 0;
-    
+  margin: 100px 0;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+#button {
+  display: inline-block;
+  background-color: #ff9800;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 4px;
+  margin: 30px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  transition: background-color 0.3s;
+  z-index: 1000;
+  transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
+  visibility: hidden;
+}
+#button:hover {
+  cursor: pointer;
+  background-color: #333;
+}
+#button:active {
+  background-color: #555;
+}
+
+#button::after {
+  content: "\f077";
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 2em;
+  line-height: 50px;
+  color: #fff;
+}
+
+.show {
+  visibility: visible !important;
 }
