--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -72,6 +72,9 @@
 
   <p class="adress"><span>Payment: </span>{{ payment }}</p>
 
+  <p class="adress"><span> <b>	
+    &#128222;</b> </span>{{ service.phone_number }}</p>
+
   <div class="comments-block" *ngIf="showComments; else questions">
     <h4>Comments</h4>
 
